--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "express": "^4.15.3",
     "lodash": "^4.17.4",
     "morgan": "^1.8.2"
+  },
+  "devDependencies": {
+    "chai": "^4.0.1",
+    "supertest": "^3.0.0"
   }
 }
