--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/mocha/bin/_mocha"
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/irvinemd55/meanReview#readme",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "colors": "^1.1.2",
     "express": "^4.15.3",
     "lodash": "^4.17.4",
     "morgan": "^1.8.2"
