--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "colors": "^1.1.2",
     "express": "^4.15.3",
     "lodash": "^4.17.4",
+    "mongoose": "^4.10.4",
     "morgan": "^1.8.2"
   },
   "devDependencies": {
